<resources>
    <string name="app_name">GoogleMaps</string>
    <string name="title_activity_maps">Map</string>
    <string name="find_address">Find Address</string>
    <string name="address">Address</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="latitude">Latitude</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="longitude">Longitude</string>
    <string name="input_address">Address</string>
    <string name="find_addressbt">Find Address</string>
    <string name="addreess">Addreess</string>
</resources>
